--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>Sazili Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
